Move image tag to background image to avoid gap between images when height ain't the same

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -33,3 +33,27 @@ header h1 {
 	display: flex;
 	max-width: 100%;
 }
+
+.film-poster-img {
+	max-width: 100%;
+	height: 400px;
+	object-fit: fill;
+	background-size: cover;
+	background-position: left;
+	/* background-position: center; */
+}
+
+
+
+/* === MEDIA QUERIES === */
+@media (max-width: 480px) {
+	.film-poster-img {
+		max-width: 100%;
+		height: 300px;
+		object-fit: fill;
+		background-size: cover;
+		background-position: left;
+		/* background-position: center; */
+	}
+}
+/* style={{background: `url(${posterPathBase+this.props.film.poster_path}) no-repeat center`, width: '150px', height: '290px', backgroundSize: 'cover'}} */
